--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -24,7 +24,7 @@
 
 // Reset.
 // Based on meyerweb.com/eric/tools/css/reset (v2.0 | 20110126 | License: public domain)
-
+n
 	html, body, div, span, applet, object,
 	iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 	pre, a, abbr, acronym, address, big, cite,
@@ -355,7 +355,7 @@
 			top: 0;
 			width: 100%;
 			height: 100%;
-			background: url('images/overlay.png');
+			background: url('images/lee seongbeen main1.png');
 		}
 
 		img {
@@ -934,7 +934,7 @@
 	#header {
 		position: relative;
 		margin: 0;
-		background-image: url('images/overlay.png'), url('../../images/header.jpg');
+		background-image: url('images/lee seongbeen main1.png'), url('../../images/header.jpg');
 		background-size: auto, cover;
 		background-position: top left, center center;
 		background-repeat: repeat, no-repeat;
@@ -1001,15 +1001,15 @@
 			}
 
 			&.style1 {
-				background: url('images/bgtr.svg') top right no-repeat, url('images/bgbl.svg') bottom left no-repeat, url('images/bgbl.svg') bottom left no-repeat, url('images/overlay.png'), linear-gradient(45deg, #b39c68, #a56365, #412e4c);
+				background: url('images/bgtr.svg') top right no-repeat, url('images/bgbl.svg') bottom left no-repeat, url('images/bgbl.svg') bottom left no-repeat, url('images/lee seongbeen main1.png'), linear-gradient(45deg, #b39c68, #a56365, #412e4c);
 			}
 
 			&.style2 {
-				background: url('images/bgtr.svg') top right no-repeat, url('images/bgbl.svg') bottom left no-repeat, url('images/overlay.png'), linear-gradient(45deg, #384955, #655361, #85505f);
+				background: url('images/bgtr.svg') top right no-repeat, url('images/bgbl.svg') bottom left no-repeat, url('images/lee seongbeen main1.png'), linear-gradient(45deg, #384955, #655361, #85505f);
 			}
 
 			&.style3 {
-				background: url('images/bgtr.svg') top right no-repeat, url('images/bgbl.svg') bottom left no-repeat, url('images/overlay.png'), linear-gradient(45deg, #5f796b, #3a4e59, #2f394e);
+				background: url('images/bgtr.svg') top right no-repeat, url('images/bgbl.svg') bottom left no-repeat, url('images/lee seongbeen main1.png'), linear-gradient(45deg, #5f796b, #3a4e59, #2f394e);
 			}
 
 			&.style4 {
