--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -934,7 +934,7 @@ n
 	#header {
 		position: relative;
 		margin: 0;
-		background-image: url('images/overlay.png'), url('../../images/header.jpg');
+		background-image: url('images/overlay.png'), url('../../images/lee seongbeen main1.jpg');
 		background-size: auto, cover;
 		background-position: top left, center center;
 		background-repeat: repeat, no-repeat;
